Fix: breadbrumb center div to align with subscribe box

--- a/_croucher/breadcrumb/_breadcrumb.scss
+++ b/_croucher/breadcrumb/_breadcrumb.scss
@@ -6,16 +6,17 @@
 
   .center {
     width: 100%;
-    max-width: 956px;
-    padding: 0 16px;
-    margin: 0 auto;
+    max-width: 799px;
+    padding: 0;
+    margin: unset;
     position: relative;
     display: flex;
     flex-wrap: wrap;
     column-gap: 20px;
 
     @include sm {
-      padding: 0 40px;
+      padding: 0;
+      margin: 0 auto;
     }
   }
 
